--- a/_posts/2020-01-30-forsaken.md
+++ b/_posts/2020-01-30-forsaken.md
@@ -4,7 +4,7 @@ title: "Forsaken"
 author: "Enan Ajmain"
 email: "3nan.ajmain@gmail.com"
 date: 2020-01-30
-categories: Story
+categories: [Short Story]
 permalink: "/:title.html"
 ---
 
