Remove Disqus settings from layouts

--- a/_posts/2020-01-30-forsaken.md
+++ b/_posts/2020-01-30-forsaken.md
@@ -5,6 +5,7 @@ author: "Enan Ajmain"
 email: "3nan.ajmain@gmail.com"
 date: 2020-01-30
 categories: [Short Story]
+comments: true
 permalink: "/:title.html"
 ---
 
