Fix grammar in a post

--- a/_posts/2020-01-30-forsaken.md
+++ b/_posts/2020-01-30-forsaken.md
@@ -9,7 +9,7 @@ comments: true
 permalink: "/:title.html"
 ---
 
-She had never been happy. Not really. Yes, there have been occasional
+She had never been happy. Not really. Yes, there had been occasional
 compliments from people she admired, frequent gifts wishing her the best
 from people close to her. But those were ephemeral moments compared to
 the churning sea of confusion and emptiness that was her life.
