Changed a line in a post

--- a/_posts/2020-01-30-forsaken.md
+++ b/_posts/2020-01-30-forsaken.md
@@ -110,7 +110,7 @@ however, remember the moments she fell for him. There were multiple
 moments, not one. That time when he gave her his sandals because her
 heels were killing her feet. And that time he reached over to push a
 strand of hair behind her ear. And that time when she turned over on his
-bed and saw him smiling at her, perched up on his hand. She couldn’t
+bed and saw him smiling at her, his head resting on his hand. She couldn’t
 remember when she first fell for him, either. But that hardly mattered.
 What mattered is that she fell, and fell hard.
 
