Add newer draft for a story

--- a/_posts/2020-02-17-intruder.md
+++ b/_posts/2020-02-17-intruder.md
@@ -9,63 +9,67 @@ comments: true
 permalink: "/:title.html"
 ---
 
-As he would do every other night, Atiq returned home from his tuition.
-He had gotten dinner at the hotel downstairs. It was not healthy——what
-they served——but he wasn’t health conscious either.
+As he would do every other night, Atiq returned from his tuition, tired
+and exhausted. He had gotten dinner at the hotel downstairs. The food
+they served wasn’t healthy, but neither was Atiq health-conscious.
 
-He brushed his teeth, turned off the light, plugged off his phone and
-went to bed. After watching funny online videos for an hour or three, he
-slipped into sleep.
+He brushed his teeth, turned off the light, and went to bed. After
+watching videos for an hour or three, he slipped into sleep.
 
-He woke up with his body paralyzed, not being able to move even his
-muscle.
+He woke up with his body paralyzed, mind awake but body asleep.
 
 The doctors called it narcolepsy. He had been experiencing these
-episodes since his college years. His doctors decided it was due to,
-apparently, irregular sleep cycle and psychological stress. They assured
-him it was nothing to be afraid of and was quite common. For all their
-words, Atiq had a feeling none of them had narcolepsy themselves. It was
-definitely something to be afraid of.
+episodes since his college years. His doctors decided it was apparently
+due to irregular sleep cycle and psychological stress. They assured him
+it was nothing to be afraid of, that it was quite common. For all their
+words, Atiq had a feeling none of them had narcolepsy themselves.
+Otherwise, they would know it was definitely something to be afraid of.
 
 Caw! CAW!
 
-He glanced at the window to his right, since he could not move his head.
-There was a crow perched on the windowsill, preening its feathers and
-cocking its head. It stared at Atiq as if waiting for his response. When
-it didn’t get any, it beat its wings and cawed once more, harsher than
-before as if to display its urgency.
+Atiq glanced at his right. There was a crow perched on the windowsill, a
+dark silhouette against the pale moonlight. It stared at Atiq as if
+waiting for a response. When it didn’t get any, it beat its wings and
+cawed once more, harsher than before as if to show its urgency.
 
-The moonlight seeped through the window like molten silver, creating an
-eerie aura. The crow took flight, showering Atiq with a dreadful stench
-of moist earth, mold and all things dead, and perched on his chest.
-Cocking its head to one side, it cawed in Atiq’s face. The stink of
-death was overwhelming, almost gagging. Atiq couldn’t move yet. And now
-his lungs refused to breath in such foul air. Panicking, he started to
-shudder, willing his body to snap out of the episode.
+Moonlight seeped through the window like molten silver, creating an
+eerie aura. The crow took flight——showering Atiq with a dreadful stench
+of mold, blight and all things dead——and perched on his chest. It was
+close enough for Atiq to see every barb of its dark, ominous feathers,
+its eyes a black bead of threatening glare.
 
-The crow hopped onto his face from his chest, its sharp nails and callus
-feet digging into his skin with peculiar discomfort. It cawed once more,
-now close enough for Atiq to see every barb of its dark, ominous
-feather. The underbelly of the crow had gray spots on it, and was damp
-and soggy as the body of a rotting corpse.
+The crow cawed again, shifting its legs and beating its wings. It
+started moving forward, toward Atiq’s face, its callus feet and sharp
+nails digging into his bare chest. Panicking, Atiq shuddered, willing
+his body to snap out of the episode. It didn’t work. Not a single muscle
+moved.
 
-He felt his heart pumping hot blood through his vein, his body clammy
-and dank with sweat. The crow, big as Atiq’s face, started pecking at
-his face. At his lips, splitting it apart for Atiq to taste his blood.
-At his nose, cutting it open for Atiq to inhale his blood. At his eye,
-gouging it out with a soggy squeak.
+With a hop, the crow sat on Atiq’s face, the damp stench of it
+overwhelming him. He could not breath in such foul air. The underbelly
+of the bird was spotted with gray flecks. It was sodden, damp and musty,
+like the body of a rotting corpse. The crow cawed again, ringing Atiq’s
+ears. He could do nothing except stare at the black intruder with
+wide-eyed panic.
 
-Atiq sat bolt upright, screaming and holding his eye with his hand. The
+Hot blood pumped through Atiq’s veins, his body clammy and dank with
+cold sweat. The crow started pecking at his face. At his lips, splitting
+it apart for Atiq to taste his blood. At his nose, cutting it open for
+Atiq to breath in his blood. At his eyes, gouging it out with a soggy
+squeak.
+
+Atiq sat bolt upright, screaming, and holding his hand over his eye. The
 eye that was not there anymore.
 
 A second later, Atiq stopped screaming. Panting and sweating, he moved
 his hand around to feel his eye. *It’s still there!* He looked around
-for the crow but found no trace of it.
+the dark room——lit only by the moonlight flowing in through the open
+window——searching for the crow. There was no trace of it. Everything was
+still and calm.
 
 *Just a dream. Sheesh!*
 
-He turned around and patted his pillow to get ready to go to sleep
-again.
+Intending to catch up with his disrupted sleep, Atiq turned around and
+patted his pillow.
 
 A single dark feather floated up from the pillow and, swinging left and
 right, settled down on it again.
